AbstractApiInterceptor 调用 checkExclude 时创建实例失败